deriving-0.1.1/tests/rejected/eq2.ml
(* Eq for records with polymorphic fields *)
type r4 = {
  l1 : 'a . 'a list
} deriving (Eq)
